updated leadscontroller endpoint
